Some little changes